PL-4161 Test yarg from gradle